header part complite

--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,14 @@ body header nav .row .option ul .download {
   border: 2px solid var(--brand1);
   border-radius: 50px;
 }
+body header #banner .row {
+  position: relative;
+  align-items: center;
+  padding-bottom: 230px;
+}
 body header #banner .row .left_tex {
-  padding: 180px 100px 200px 0px;
+  position: relative;
+  padding-right: 90px;
 }
 body header #banner .row .left_tex .text_body h2 {
   font-size: 33px;
@@ -100,6 +106,35 @@ body header #banner .row .left_tex .text_body .hire .link_2::after {
   width: 18px;
   right: -12px;
   top: 50%;
+}
+body header #banner .row .left_tex .s_links {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: -100px;
+  transform: translate(-50%, -50%) rotate(-90deg);
+}
+body header #banner .row .left_tex .s_links ul {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+body header #banner .row .left_tex .s_links ul li {
+  display: inline-flex;
+  flex-wrap: wrap;
+  padding: 0px 20px;
+  align-items: center;
+}
+body header #banner .row .left_tex .s_links ul li a {
+  font-size: 16px;
+  line-height: 16px;
+}
+body header #banner .row .left_tex .s_links ul li p {
+  color: black;
+  font-weight: 800;
+  text-transform: capitalize;
+  padding-left: 12px;
+  font-size: 13px;
+  line-height: 13px;
 }
 body header #banner .row .right_img .img_all {
   display: flex;
@@ -216,4 +251,25 @@ body header #banner .row .right_img .circle_model {
 body header #banner .row .right_img .circle_model i {
   font-size: 37px;
   color: var(--brand1);
+}
+body header #banner .row .mouse {
+  padding: 0px;
+  height: 24px;
+  width: 16px;
+  border: 2px solid black;
+  border-radius: 10px;
+  position: relative;
+  position: absolute;
+  bottom: 110px;
+  right: 0px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+body header #banner .row .mouse::after {
+  content: '';
+  height: 7px;
+  width: 2px;
+  background-color: black;
+  position: absolute;
 }
